fix spacing of zero button

--- a/style.css
+++ b/style.css
@@ -83,5 +83,5 @@ button:active {
 }
 
 #zero {
-  flex-grow: 2;
+  flex-grow: 2.05;
 }
